# Copyright (c) <2014-2017> <Newton Game Dynamics>
#
# This software is provided 'as-is', without any express or implied
# warranty. In no event will the authors be held liable for any damages
# arising from the use of this software.
#
# Permission is granted to anyone to use this software for any purpose,
# including commercial applications, and to alter it and redistribute it
# freely.

cmake_minimum_required(VERSION 3.12.0)

include_directories(dMath/)
include_directories(dgCore/)
include_directories(dgPhysics/)
include_directories(dgMeshUtil/)
include_directories(dContainers/)
include_directories(dProfiler/dTimeTracker/)

add_subdirectory(dgCore)
add_subdirectory(dgPhysics)
add_subdirectory(dProfiler)
add_subdirectory(dgNewton)
add_subdirectory(dMath)
add_subdirectory(dContainers)
